Adds in hot loading for express development server

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -2,3 +2,14 @@
  * main.less
  * Main file app styles
  */
+
+body {
+  margin: 0;
+}
+
+#root {
+  display: flex;
+  flex: 1;
+  height: 100%;
+  color: grey;
+}
